--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated"
+    ".contentlayer/generated",
+    "content/pages/blog.mdx" 
   ],
   "exclude": ["node_modules"]
 }
